@@ -24943,7 +24943,7 @@ Canvas:
   m_OverridePixelPerfect: 0
   m_SortingBucketNormalizedSize: 0
   m_AdditionalShaderChannelsFlag: 25
-  m_SortingLayerID: 0
+  m_SortingLayerID: -1147721805
   m_SortingOrder: 2
   m_TargetDisplay: 0
 --- !u!114 &1101418321
@@ -48682,7 +48682,7 @@ Canvas:
   m_OverridePixelPerfect: 0
   m_SortingBucketNormalizedSize: 0
   m_AdditionalShaderChannelsFlag: 25
-  m_SortingLayerID: 0
+  m_SortingLayerID: -1147721805
   m_SortingOrder: 2
   m_TargetDisplay: 0
 --- !u!224 &6313104772387981929
