@@ -212,7 +212,7 @@
 		{ "key": "hobgoblinHideout_event", "value": "You stand inside a crude bunker. In front of you, a large goblin sits on a stone throne. Unlike most of their kind, it looks brave." },
 		{ "key": "hideFromThePack_event", "value": "An undetected pack of greyhides wandered close to you. You dive behind the nearest mound. Did they hear you?" },
 		{ "key": "outpostCandleAbandoned_event", "value": "By some miracle you've found an outpost.\nWith no maintenance, it has succumbed to its time in the wastes." },
-		{ "key": "alphaWounds_event", "value": "The alpha fatally wounded you.\n Flatyz is unconcious. You'll be dead soon." },
+		{ "key": "alphaWounds_event", "value": "The alpha fatally wounded you.\n Flaytz is unconcious. You'll be dead soon." },
 		{ "key": "theDenGreyWastes_event", "value": "Large packs of greyhides will dig out dens beside areas with lots of food. Only the strongest greyhides can maintain these dens."},
 		{ "key": "spinalArch_event", "value": "Hundreds of spinals are conglomerating together in the form\nof a giant archway." },
 		{ "key": "talkingWraith_event", "value": "A lesser wraith drifts towards you. Is that...a mouth?" },
@@ -223,7 +223,7 @@
 		{ "key": "ancientAltar_event", "value": "The world that existed before The Kindling worshipped gods whose names were lost to history. There seems to be an offering on this altar." },
 		{ "key": "largeTombGreyWastes_event", "value": "Your aimless walking has drawn you to this enormous tombstone. Perhaps something was calling you here. Maybe the path is near?"},
 		{ "key": "largeTombNoMarkings_event", "value": "Just as you turn to leave, a deafening screech fills the sky.\nThe doll is gone. Cries echo behind you. \"Doll? FRIENDS?\"." },
-		{ "key": "wraithWounds_event", "value": "The wraith's spell has lost its effect. But the battle has grieviously injured you. Flatyz is barely standing." },
+		{ "key": "wraithWounds_event", "value": "The wraith's spell has lost its effect. But the battle has grieviously injured you. Flaytz is barely standing." },
 		{ "key": "end0GreyWastes_event", "value": "You limp back on to the path." },
 		{ "key": "end0TombsGreyWastes_event", "value": "Whatever the wraith's intentions were,\nit did bring you to your goal. Hurry." },
 		{ "key": "end1GreyWastes_event", "value": "A lamp post. Are your eyes playing tricks on you?\nThese need constant maintenance. Umaria is close." },
@@ -260,7 +260,7 @@
 		{ "key": "foundPath0_int", "value": "Where" },
 		{ "key": "foundPath1_int", "value": "Bottles" },
 		{ "key": "foundPath2_int", "value": "Face" },
-		{ "key": "foundPath3_int", "value": "Flatyz" },
+		{ "key": "foundPath3_int", "value": "Flaytz" },
 		{ "key": "foundPath4_int", "value": "Descend" },
 		{ "key": "theGreyWastes0_int", "value": "Begin" },
 		{ "key": "fight_int", "value": "Fight" },
@@ -416,17 +416,17 @@
 		{ "key": "wraithTomb0_0_res", "value": "The tomb resonates. You feel better." },
 		{ "key": "wraithTomb0_1_res", "value": "Nothing happened. A waste of time." },
 		{ "key": "wraithTomb1_0_res", "value": "The stone lights up. There's something lying at your feet." },
-		{ "key": "wraithTomb1_1_res", "value": "The tomb glows. An oddly shaped charm is hanging around Flatyz's neck." },
+		{ "key": "wraithTomb1_1_res", "value": "The tomb glows. An oddly shaped charm is hanging around Flaytz's neck." },
 		{ "key": "wraithTomb1_2_res", "value": "The wraiths are angered." },
 		{ "key": "wraithTomb1_3_res", "value": "You wait a bit but nothing happens. Maybe your prayers will be answered in the afterlife." },
 		{ "key": "wraithTomb2_0_res", "value": "The stone shimmers. There's a cloak wrapped around you." },
-		{ "key": "wraithTomb2_1_res", "value": "The tomb flashes white. A wraith's cloak falls before Flatyz." },
+		{ "key": "wraithTomb2_1_res", "value": "The tomb flashes white. A wraith's cloak falls before Flaytz." },
 		{ "key": "wraithTomb2_2_res", "value": "No one protected the wraiths. Why should they protect you?" },
 		{ "key": "wraithTomb2_3_res", "value": "A cold wind passes over you. A sign that you should probably leave." },
 		{ "key": "wraithTomb3_0_res", "value": "The markings on the tomb start to glow. Something is in your pockets." },
 		{ "key": "wraithTomb3_1_res", "value": "The tomb emits some kind of light. Oddly shaped coins are in your hands." },
 		{ "key": "wraithTomb3_2_res", "value": "The dead owe you nothing." },
-		{ "key": "wraithTomb3_3_res", "value": "You idle at the rock. Your prayers have gone unanswered.\nFlatyz is unphased. \"Not the first time this has happened.\"" },
+		{ "key": "wraithTomb3_3_res", "value": "You idle at the rock. Your prayers have gone unanswered.\nFlaytz is unphased. \"Not the first time this has happened.\"" },
 		{ "key": "goblinHut0_0_res", "value": "The pile is worthless, but you notice\n its sitting on top of some good condition rags." },
 		{ "key": "goblinHut0_2_res", "value": "You inspect the goblin's crude hut, only to see a pile of garbage." },
 		{ "key": "goblinHutLoud0_0_res", "value": "You sift through their pile and find a lot of useful trinkets." },
@@ -460,7 +460,7 @@
 		{ "key": "outpostCandleAbandoned1_0_res", "value": "The flame flickers as it saps the candle of its dwindling strength to recover yours." },
 		{ "key": "outpostCandleAbandoned2_0_res", "value": "Even when eroded to nothing, a candle can still perform miracles." },
 		{ "key": "theDenGreyWastes0_0_res", "value": "\"There's probably a really strong greyhide in there.\nTogether, I think we stand a chance.\"" },
-		{ "key": "theDenGreyWastes1_0_res", "value": "Flatyz smiles. \"It wouldn't be fair if you died alone searching for a cure I read in a chronicle. Let's go home already.\"" },
+		{ "key": "theDenGreyWastes1_0_res", "value": "Flaytz smiles. \"It wouldn't be fair if you died alone searching for a cure I read in a chronicle. Let's go home already.\"" },
 		{ "key": "theDenGreyWastes2_0_res", "value": "The path is right there." },
 		{ "key": "spinalArch0_0_res", "value": "The archway glows green as it showers you with vigor." },
 		{ "key": "spinalArch0_1_res", "value": "As you walk through, the spinals begin to move faster and faster. Halfway through, they strike the path with lightning." },
